<resources>
    <string name="app_name">Smart Bag</string>
    <string name="network_error">Check your network connection and try again.</string>
    <string name="generic_error">An error occurred, please try again</string>
    <string name="bluetooth_not_found">Device does not support Bluetooth</string>
    <string name="network_issue">Sorry, an error has occurred, please try again.</string>
    <string name="retry">Retry</string>
    <string name="waking_smart_bag">Waking your Smart Bag</string>
    <string name="waking_smart_bag_msg_body">Click and hold your \'Smart Bag\' button for 3 seconds..</string>
    <string name="waking_smart_bag_msg_sub_body">A yellow light will appear indicating that it\'s awake.</string>
    <string name="connecting">Connecting..</string>
    <string name="connected">Connected!</string>
    <string name="disconnected">Disconnected from Device!</string>
    <string name="reconnect_error">Unable to reconnect.</string>
    <string name="next">Next</string>
    <string name="finding_ibag">Finding nearby Smart Bag</string>
    <string name="finding_ibag_msg_body">Linking to nearby Smart Bag..</string>
    <string name="error_bluetooth_permissions"> Invallid Bluetooth Permissions..</string>
    <string name="error_location_permissions"> Invallid Location Permissions..</string>
    <string name="ok">Ok</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="cancel">Cancel</string>
    <string name="device_not_found">Device Not Found</string>
    <string name="device_not_found_sub">Unable to find device..</string>
    <string name="unable_to_proceed">Unable to proceed without a connected device!</string>
    <string name="start_enrollment">Let\'s Start</string>
    <string name="start_enrollment_sub">Put your finger on the sensor..</string>
    <string name="start_enrollment_3">Almost there</string>
    <string name="fingerprint_added">Fingerprint Added!</string>
    <string name="fingerprint_added_sub">Fingerprint added Successfuly.</string>
    <string name="delete_fingerprint_dialog_title">Are you sure you want to delete %1$s ?</string>
    <string name="no_fingerprints">No Fingerprints.</string>
    <string name="remove_finger">Remove Finger</string>
    <string name="remove_finger_sub">Lift your finger.</string>
    <string name="press_same_finger_again">Press Finger</string>
    <string name="press_same_finger_again_sub">Press same finger again.</string>
</resources>
