<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="@dimen/one_third_margins">

    <TextView
        android:id="@+id/dialog_delete_fingerprint_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/delete_fingerprint_dialog_title"
        android:textSize="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/dialog_delete_fingerprint_no_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/dialog_delete_fingerprint_yes_btn"
            android:text="@string/no" />

        <Button
            android:id="@+id/dialog_delete_fingerprint_yes_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/yes" />

    </RelativeLayout>

</LinearLayout>